<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MisPrecios</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_scan">SCAN</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="label_product_not_foud">Producto No Registrado</string>
    <string name="label_product_id">Código de Barras: </string>
    <string name="label_product_brand">Marca: </string>
    <string name="label_product_category">Categoría: </string>
    <string name="label_product_description">Descripción: </string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="title_activity_add_price">AddPriceActivity</string>
    <string name="lbl_total_price">Precio: $</string>
    <string name="lbl_quantity">Cantidad:</string>
    <string name="lbl_price_per_unit">Precio por unidad: $</string>
    <string name="lbl_market">Comercio:</string>
    <string name="lbl_date">Fecha:</string>

</resources>
